--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -708,7 +708,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="/home/jdgt/images/yukkuri"
+image_source="auto"
 
 
 # Ascii Options
@@ -833,7 +833,7 @@ image_size="auto"
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=-1758
+gap=3
 
 # Image offsets
 # Only works with the w3m backend.
