--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -23,8 +23,8 @@ print_info() {
     info "Memory" memory
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
-    info "CPU Usage" cpu_usage
-    info "Disk" disk
+    # info "CPU Usage" cpu_usage
+    # info "Disk" disk
     # info "Battery" battery
     # info "Font" font
     # info "Song" song
@@ -116,7 +116,7 @@ uptime_shorthand="on"
 # Example:
 # on:   '1801MiB / 7881MiB (22%)'
 # off:  '1801MiB / 7881MiB'
-memory_percent="on"
+memory_percent="off"
 
 # Change memory output unit.
 #
@@ -298,7 +298,7 @@ gpu_type="all"
 # Example:
 # on:  '1920x1080 @ 60Hz'
 # off: '1920x1080'
-refresh_rate="on"
+refresh_rate="off"
 
 
 # Gtk Theme / Icons / Font
@@ -423,7 +423,7 @@ disk_subtitle="mount"
 # Example:
 # on:  'Disk (/): 74G / 118G (66%)'
 # off: 'Disk (/): 74G / 118G'
-disk_percent="off"
+disk_percent="on"
 
 
 # Song
@@ -632,8 +632,8 @@ col_offset="auto"
 # Example:
 # neofetch --bar_char 'elapsed' 'total'
 # neofetch --bar_char '-' '='
-bar_char_elapsed="■"
-bar_char_total="-"
+bar_char_elapsed="-"
+bar_char_total="="
 
 # Toggle Bar border
 #
@@ -660,7 +660,7 @@ bar_length=15
 # Example:
 # neofetch --bar_colors 3 4
 # neofetch --bar_colors distro 5
-bar_color_elapsed="10"
+bar_color_elapsed="distro"
 bar_color_total="distro"
 
 
@@ -679,10 +679,10 @@ bar_color_total="distro"
 # infobar: 'info [---=======]'
 # barinfo: '[---=======] info'
 # off:     'info'
-cpu_display="barinfo"
-memory_display="barinfo"
-battery_display="barinfo"
-disk_display="barinfo"
+cpu_display="off"
+memory_display="off"
+battery_display="off"
+disk_display="off"
 
 
 # Backend Settings
