--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -13,6 +13,8 @@
 	"clangd.path": "~/.config/coc/extensions/coc-clangd-data/install/18.1.3/clangd_18.1.3/bin/clangd",
 	"inlayHint.enable": false,
 	"Lua.workspace.library": ["/opt/nvim-linux64/share/nvim/runtime"],
+	"python.venvPath": "~/.venv",
+	"python.pythonPath": "~/.venv/bin/python3.11",
 	"pyright.inlayHints.parameterTypes": false,
 	"pyright.inlayHints.variableTypes": false,
 	"pyright.inlayHints.functionReturnTypes": false
