kitty kanagawa colors and coc python venv path

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,29 +7,42 @@ enable_audio_bell no
 
 tab_bar_style slant
 
-foreground #DCD7BA
-background #1F1F28
+foreground                      #DDD8BB
+background                      #1F1F28
+selection_foreground            #DDD8BB
+selection_background            #49473E
 
-background_opacity 0.6
-background_blur 32
+cursor                          #E6E0C2
+cursor_text_color               #1F1F28
+
+active_tab_foreground           #DDD8BB
+active_tab_background           #614A82
+inactive_tab_foreground         #DDD8BB
+inactive_tab_background         #363644
 
 color0 #1F1F28
-color1 #E82424
-color2 #76946A
-color3 #FF9E3B
-color4 #658594
-color5 #957FBB
-color6 #9CABCA
-color7 #DCD7BA
+color8 #3C3C51
 
-color8 #2A2A37
-color9 #FF5D62
-color10 #98BB6C
-color11 #E6C384
-color12 #7FB4CA
-color13 #D27E99
-color14 #A3D4D5
-color15 #FAF4D4
+color1 #E46A78
+color9 #EC818C
+
+color2  #98BC6D
+color10 #9EC967
+
+color3  #E5C283
+color11 #F1C982
+
+color4  #7EB3C9
+color12 #7BC2DF
+
+color5  #957FB8
+color13 #A98FD2
+
+color6  #7EB3C9
+color14 #7BC2DF
+
+color7  #DDD8BB
+color15 #A8A48D
 
 shell_integration no-cursor
 
