--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,42 +7,63 @@ enable_audio_bell no
 
 tab_bar_style slant
 
-foreground                      #DDD8BB
-background                      #1F1F28
-selection_foreground            #DDD8BB
-selection_background            #49473E
+#: The basic colors
+foreground                      #dcd7ba
+background                      #1f1f28
+selection_foreground            #c8c093
+selection_background            #2d4f67
 
-cursor                          #E6E0C2
-cursor_text_color               #1F1F28
+#: Cursor colors
+cursor                          #c8c093
 
-active_tab_foreground           #DDD8BB
-active_tab_background           #614A82
-inactive_tab_foreground         #DDD8BB
-inactive_tab_background         #363644
+#: URL underline color when overing with mouse
+url_color                       #72a7bc
 
-color0 #1F1F28
-color8 #3C3C51
+#: Tab bar colors
+active_tab_foreground           #c8c093
+active_tab_background           #1f1f28
+inactive_tab_foreground         #727169
+inactive_tab_background         #1f1f28
 
-color1 #E46A78
-color9 #EC818C
+#: The basic 16 colors
 
-color2  #98BC6D
-color10 #9EC967
+#: black
+color0  #16161d
+color8  #727169
 
-color3  #E5C283
-color11 #F1C982
+#: red
+color1  #c34043
+color9  #e82424
 
-color4  #7EB3C9
-color12 #7BC2DF
+#: green
+color2  #76946a
+color10 #98bb6c
 
-color5  #957FB8
-color13 #A98FD2
+#: yellow
+color3  #c0a36e
+color11 #e6c384
 
-color6  #7EB3C9
-color14 #7BC2DF
+#: blue
+color4  #7e9cd8
+color12 #7fb4ca
 
-color7  #DDD8BB
-color15 #A8A48D
+#: magenta
+color5  #957fb8
+color13 #938aa9
+
+#: cyan
+color6  #6a9589
+color14 #7aa89f
+
+#: white
+color7  #c8c093
+color15 #dcd7ba
+
+
+#: You can set the remaining 240 colors as color16 to color255.
+
+color16 #ffa066
+color17 #ff5d62
 
 shell_integration no-cursor
 
