--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,6 +7,9 @@ enable_audio_bell no
 
 tab_bar_style slant
 
+background_opacity 0.7
+background_blur 32
+
 #: The basic colors
 foreground                      #dcd7ba
 background                      #1f1f28
