--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,8 +1,54 @@
-# shorter shadows
-shadow-radius = 5;
-shadow-offset-x = -5;
-shadow-offset-y = -5;
-shadow-opacity = 0.8;
-# faster animations
-fade-in-step = 0.07;
-fade-out-step = 0.07;
+shadow = true;
+shadow-radius = 7;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
+shadow-exclude = [
+  "name = 'Notification'",
+  "class_g = 'Conky'",
+  "class_g ?= 'Notify-osd'",
+  "class_g = 'Cairo-clock'",
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'Synapse'",
+];
+fading = true;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+fade-delta = 7
+inactive-opacity = 1;
+frame-opacity = 0.9;
+inactive-opacity-override = false;
+active-opacity = 1.0
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
+corner-radius = 6
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
+blur-method = "dual_kawase"
+blur-strength = 3
+blur-background = true
+blur-kern = ""
+blur-background-exclude = [
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c",
+  "class_g = 'Synapse'",
+];
+vsync = false
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+detect-rounded-corners = true;
+detect-client-opacity = true;
+use-ewmh-active-win = true
+unredir-if-possible = true
+detect-transient = true;
+glx-no-stencil = true;
+use-damage = true;
+log-level = "warn";
+wintypes:
+{
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  dock = { shadow = false; clip-shadow-above = true; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
+};
