--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,8 +7,9 @@ enable_audio_bell no
 
 tab_bar_style slant
 
-background_opacity 1
-background_blur 32
+background_opacity 0.75
+background_tint 1
+# background_blur 1
 
 #: The basic colors
 foreground                      #dcd7ba
