change rofi-bluetooth location

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -106,9 +106,9 @@ label = %percentage:2%
 
 [module/bluetooth]
 type = custom/script
-exec = ~/.config/polybar/scripts/rofi-bluetooth --status
+exec = rofi-bluetooth --status
 interval = 1
-click-left = ~/.config/polybar/scripts/rofi-bluetooth -no-show-icons &
+click-left = rofi-bluetooth -no-show-icons &
 format-padding = 1%
 
 
@@ -211,7 +211,7 @@ animation-discharging-4 = 
 animation-discharging-framerate = 500
 
 animation-low-0 = !
-animation-low-1 = 
+animation-low-1 = " "
 animation-low-framerate = 200
 
 
