--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -28,6 +28,8 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMonoNL Nerd Font;2
 
+; wm-restack = bspwm
+
 
 [bar/main]
 inherit = base
