--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -56,7 +56,7 @@ format-background = ${colors.background}
 type = internal/xwindow
 format = <label>
 label = %title%
-label-maxlen = 60
+label-maxlen = 45
 label-empty = Desktop
 
 
@@ -249,33 +249,33 @@ label-close-foreground = ${colors.disabled}
 label-separator = |
 label-separator-foreground = ${colors.foreground}
 
-menu-0-0 = "Power Off"
+menu-0-0 = "Pwr Off"
 menu-0-0-exec = menu-open-1
 menu-0-0-foreground = ${colors.red}
 
-menu-0-1 = "Reboot"
+menu-0-1 = "Reb"
 menu-0-1-exec = menu-open-2
 menu-0-1-foreground = ${colors.red}
 
-menu-0-2 = "Hibernate"
+menu-0-2 = "Hib"
 menu-0-2-exec = menu-open-3
 menu-0-2-foreground = ${colors.blue}
 
-menu-1-0 = "Cancel "
+menu-1-0 = "Back "
 menu-1-0-exec = menu-open-0
 menu-1-0-foreground = ${colors.urgent}
 menu-1-1 = "Power off"
 menu-1-1-exec = systemctl poweroff
 menu-1-1-foreground = ${colors.red}
 
-menu-2-0 = "Cancel "
+menu-2-0 = "Back "
 menu-2-0-exec = menu-open-0
 menu-2-0-foreground = ${colors.urgent}
 menu-2-1 = "Reboot"
 menu-2-1-exec = systemctl reboot
 menu-2-1-foreground = ${colors.red}
 
-menu-3-0 = "Cancel"
+menu-3-0 = "Back"
 menu-3-0-exec = menu-open-0
 menu-3-0-foreground = ${colors.urgent}
 menu-3-1 = "Hibernate "
