--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -170,7 +170,7 @@ type = internal/battery
 battery = ${system.battery}
 adapter = ${system.adapter}
 
-full-at = 99
+full-at = 92
 low-at = 10
 
 time-format = %H:%M
@@ -179,14 +179,11 @@ format-charging = <animation-charging>  <label-charging>
 label-charging = %percentage%%
 format-charging-prefix = " "
 
-format-discharging = <animation-discharging>  <label-discharging>
+format-discharging = <ramp-capacity>  <label-discharging>
 label-discharging = %percentage%%
-format-discharging-padding = 1
 
 
-format-full = "<label-full> "
-format-full-prefix = " "
-format-full-padding = 1
+format-full = <ramp-capacity>  <label-full>
 
 label-full = %percentage%%
 
@@ -202,13 +199,6 @@ animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
 animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-3 = 
-animation-discharging-4 = 
-animation-discharging-framerate = 500
 
 animation-low-0 = !
 animation-low-1 = " "
