--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -109,7 +109,7 @@ type = custom/script
 exec = rofi-bluetooth --status
 interval = 1
 click-left = rofi-bluetooth -no-show-icons &
-format-padding = 1%
+format-padding = 1
 
 
 [module/network]
@@ -127,23 +127,24 @@ label-connected = "%{A1:networkmanager_dmenu &:}%{A}"
 label-disconnected = "%{A1:networkmanager_dmenu &:}Offline%{A}"
 
 
-[module/ethernet]
-type = internal/network
-interface = w
-format-connected = <label-connected>
-format-connected-prefix = "󰈁 "
-format-connected-padding = 1
-format-disconnected = <label-disconnected>
-format-disconnected-prefix = "󰈂 "
-format-disconnected-padding = 1
-label-connected = "%{A1:networkmanager_dmenu &:}%downspeed%|%upspeed%%{A}"
-label-disconnected = "{%{A1:networkmanager_dmenu &:}%{A}"
+; [module/ethernet]
+; type = internal/network
+; interface = ${network_interface_ethernet}
+; format-connected = <label-connected>
+; format-connected-prefix = "󰈁 "
+; format-connected-padding = 1
+; format-disconnected = <label-disconnected>
+; format-disconnected-prefix = "󰈂 "
+; format-disconnected-padding = 1
+; label-connected = "%{A1:networkmanager_dmenu &:}%downspeed%|%upspeed%%{A}"
+; label-disconnected = "{%{A1:networkmanager_dmenu &:}%{A}"
 
 
 [module/temperature]
 type = internal/temperature
 interval = 1
-thermal-zone = 0
+thermal-zone = 8
+zone-type = x86_pkg_temp
 warm-temperature = 60
 units = true
 format = <ramp> <label>
