--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -44,7 +44,6 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
-  "_GTK_FRAME_EXTENTS@"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -148,7 +147,7 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "dual_kawase"
+# blur-method = "dual_kawase"
 # blur-size = 32
 #
 blur-deviation = false
@@ -186,7 +185,6 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@"
 ];
 
 #################################
@@ -208,7 +206,7 @@ backend = "glx";
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
 # degradation. Only works with OpenGL.
-dithered-present = false;
+dithered-present = true;
 
 # Enable/disable VSync.
 # vsync = false
