--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -35,10 +35,10 @@ font-0 = JetBrainsMonoNL Nerd Font;2
 inherit = base
 monitor = eDP-1
 
-; dpi = 96
+; dpi = 80
 
 modules-left = menu workspaces window
-modules-right = keyboard audio bluetooth network ethernet temperature battery date powermenu
+modules-right = keyboard audio bluetooth network temperature battery date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -50,7 +50,7 @@ inherit = base
 monitor = HDMI-1
 
 modules-left = workspaces window
-modules-right = keyboard audio network ethernet date 
+modules-right = keyboard audio network date 
 
 cursor-click = pointer
 cursor-scroll = ns-resize
