--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -108,7 +108,7 @@ label = %percentage:2%
 type = custom/script
 exec = rofi-bluetooth --status
 interval = 1
-click-left = rofi-bluetooth -no-show-icons &
+click-left = blueman-manager
 format-padding = 1
 
 
