--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -37,7 +37,7 @@ monitor = eDP-1
 
 ; dpi = 80
 
-modules-left = menu workspaces window
+modules-left = menu workspaces
 modules-right = keyboard audio bluetooth network temperature battery date powermenu
 
 cursor-click = pointer
@@ -49,7 +49,7 @@ enable-ipc = true
 inherit = base
 monitor = HDMI-1
 
-modules-left = workspaces window
+modules-left = workspaces
 modules-right = keyboard audio network date 
 
 cursor-click = pointer
