--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -177,16 +177,14 @@ low-at = 10
 
 time-format = %H:%M
 
-format-charging = <animation-charging>  <label-charging>
+format-charging = <ramp-capacity>  <label-charging>
 label-charging = %percentage%%
 format-charging-prefix = " "
 
 format-discharging = <ramp-capacity>  <label-discharging>
 label-discharging = %percentage%%
 
-
 format-full = <ramp-capacity>  <label-full>
-
 label-full = %percentage%%
 
 ramp-capacity-0 = 
@@ -194,13 +192,6 @@ ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 750
 
 animation-low-0 = !
 animation-low-1 = " "
