polybar desktop icons and other stuff

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -28,7 +28,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMonoNL Nerd Font;2
 
-; wm-restack = bspwm
+wm-restack = bspwm
 
 
 [bar/main]
