--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,7 +5,8 @@ cursor_shape block
 
 enable_audio_bell no
 
-tab_bar_style slant
+tab_bar_style separator
+tab_separator " | "
 
 background_opacity 0.93
 background_tint 1
