--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -11,37 +11,26 @@ type = internal/xworkspaces
 pin-workspaces = true
 enable-scroll = false
 
-; icon-0 = 1;a
-; icon-1 = 2;b
-; icon-2 = 3;c
-; icon-3 = 4;d
-; icon-4 = 5;e
-; icon-5 = 6;f
-; icon-6 = 7;g
-; icon-7 = 8;h
-; icon-8 = 9;i
-; icon-9 = 10;j
-; icon-default = m
-;
-; label-monitor = %icon%
-; label-active = %icon%
-; label-occupied = %icon%
-; label-urgent = %icon%
-; label-empty = %icon%
+icon-4 = 1;
+icon-0 = 2;
+icon-1 = 6;
+icon-2 = 7;
+icon-3 = 10;
+icon-default = 
 
-label-active = %name%
+label-active = %icon%
 label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.secondary}
 label-active-padding = 1.5
 
-label-occupied = %name%
+label-occupied = %icon%
 label-occupied-padding = 1.5
 
-label-urgent = %name%
+label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1.5
 
-label-empty = %name%
+label-empty = %icon%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1.5
 
