--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -37,7 +37,7 @@ monitor = eDP-1
 
 ; dpi = 80
 
-modules-left = menu workspaces
+modules-left = workspaces
 modules-right = keyboard audio bluetooth network temperature battery date powermenu
 
 cursor-click = pointer
