--- a/.config/zoomus.conf
+++ b/.config/zoomus.conf
@@ -1,3 +1,13 @@
+[1VGa6fEsTQYEquYOdMv]
+j1V5NQSTWNQPlSB8TSaIgvM%23=1718922323
+
+[AS]
+showframewindow=true
+
+[CodeSnippet]
+lastCodeType=0
+wrapMode=0
+
 [General]
 %2B8gcPZIuASRcihpYJW6UA83rPnH%2B7ifu11s9xp3p8Rc%23=1718922323
 63tJmSFEpYg9dR34FZPBHK8VKGPcUT1yDVJWSS9UTuU%23=1718922323
@@ -15,7 +25,7 @@ chatListPanelLastWidth=230
 com.disable.connection.pk.status=false
 com.zoom.client.langid=0
 conf.webserver=https://zoom.us
-currentMeetingId=96672369702
+currentMeetingId=97871013419
 deviceID=D4:E9:8A:32:ED:A3
 disableCef=false
 enable.host.auto.grab=true
@@ -54,18 +64,8 @@ timeFormat12HoursEnable=true
 translationFreeTrialTipShowTime=0
 upcoming_meeting_header_image=
 useSystemTheme=false
-userEmailAddress=jose.grayson@utec.edu.pe
+userEmailAddress=
 xwayland=true
-
-[1VGa6fEsTQYEquYOdMv]
-j1V5NQSTWNQPlSB8TSaIgvM%23=1718922323
-
-[AS]
-showframewindow=true
-
-[CodeSnippet]
-lastCodeType=0
-wrapMode=0
 
 [ZfyNXsYVXn89sSD]
 u%2BfYJObfh7c2x33NhQnPBCxnUKg%23=1718922323
@@ -80,3 +80,4 @@ UrM6djKC7sBYYhjF2xNCSHVpXDpFealQ%23=1718922323
 is_landscape_mode=true
 main_frame_pixel_pos_narrow="376,486"
 main_frame_pixel_pos_wide="1280,960"
+
