remove polybar separator and other stuff

--- a/.config/zoomus.conf
+++ b/.config/zoomus.conf
@@ -1,21 +1,11 @@
-[1VGa6fEsTQYEquYOdMv]
-j1V5NQSTWNQPlSB8TSaIgvM%23=1718922323
-
-[AS]
-showframewindow=true
-
-[CodeSnippet]
-lastCodeType=0
-wrapMode=0
-
 [General]
-%2B8gcPZIuASRcihpYJW6UA83rPnH%2B7ifu11s9xp3p8Rc%23=1718922323
-63tJmSFEpYg9dR34FZPBHK8VKGPcUT1yDVJWSS9UTuU%23=1718922323
-6K70qDQiygEOC1IRMP7u0d4D3mbTqYIWtc4J5HuRkQs%23=1718922323
+%2B8gcPZIuASRcihpYJW6UA83rPnH%2B7ifu11s9xp3p8Rc%23=1719539170
+63tJmSFEpYg9dR34FZPBHK8VKGPcUT1yDVJWSS9UTuU%23=1719539170
+6K70qDQiygEOC1IRMP7u0d4D3mbTqYIWtc4J5HuRkQs%23=1719539170
 GeoLocale=system
-N65z0ERhK0hfZOUrpvZbKa20IAIu0Etuq8T%2BuqWl%2Bkw%23=1718922323
+N65z0ERhK0hfZOUrpvZbKa20IAIu0Etuq8T%2BuqWl%2Bkw%23=1719532076
 SensitiveInfoMaskOn=true
-UeJ7AgrtBappnQjaaFui4jk8yVCY2K4zE14gyE34Rzo%23=1718922323
+UeJ7AgrtBappnQjaaFui4jk8yVCY2K4zE14gyE34Rzo%23=1719539170
 autoPlayGif=false
 autoScale=true
 bForceMaximizeWM=false
@@ -25,7 +15,7 @@ chatListPanelLastWidth=230
 com.disable.connection.pk.status=false
 com.zoom.client.langid=0
 conf.webserver=https://zoom.us
-currentMeetingId=97871013419
+currentMeetingId=
 deviceID=D4:E9:8A:32:ED:A3
 disableCef=false
 enable.host.auto.grab=true
@@ -63,21 +53,30 @@ system.audio.type=default
 timeFormat12HoursEnable=true
 translationFreeTrialTipShowTime=0
 upcoming_meeting_header_image=
-useSystemTheme=false
-userEmailAddress=
+useSystemTheme=true
+userEmailAddress=jose.grayson@utec.edu.pe
 xwayland=true
 
+[1VGa6fEsTQYEquYOdMv]
+j1V5NQSTWNQPlSB8TSaIgvM%23=1719539171
+
+[AS]
+showframewindow=true
+
+[CodeSnippet]
+lastCodeType=0
+wrapMode=0
+
 [ZfyNXsYVXn89sSD]
-u%2BfYJObfh7c2x33NhQnPBCxnUKg%23=1718922323
+u%2BfYJObfh7c2x33NhQnPBCxnUKg%23=1719532076
 
 [chat.recent]
 recentlast.session=
 
 [pvKc9SrvNy]
-UrM6djKC7sBYYhjF2xNCSHVpXDpFealQ%23=1718922323
+UrM6djKC7sBYYhjF2xNCSHVpXDpFealQ%23=1719532077
 
 [zoom_new_im]
 is_landscape_mode=true
 main_frame_pixel_pos_narrow="376,486"
-main_frame_pixel_pos_wide="1280,960"
-
+main_frame_pixel_pos_wide="892,1012"
