--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,7 +1,4 @@
 [colors]
-background = #1f1f28
-foreground = #dcd7ba
-
 black = #16161d
 grey = #727169
 red = #c34043
@@ -12,6 +9,10 @@ magenta = #957fb8
 cyan = #6a9589
 pink = #938aa9
 white = #c8c093
+
+; background = #1f1f28
+background = ${colors.black}
+foreground = #dcd7ba
 
 primary = ${colors.yellow}
 secondary = ${colors.blue}
