--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -18,19 +18,18 @@ icon-3 = 7;
 icon-4 = 10;
 icon-default = 
 
-label-active = %icon%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.secondary}
+label-active = %{T2}%icon%%{T-}
+label-active-background = ${colors.secondary}
 label-active-padding = 1.5
 
-label-occupied = %icon%
+label-occupied = %{T2}%icon%%{T-}
 label-occupied-padding = 1.5
 
-label-urgent = %icon%
+label-urgent = %{T2}%icon%%{T-}
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1.5
 
-label-empty = %icon%
+label-empty = %{T2}%icon%%{T-}
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1.5
 
@@ -38,7 +37,7 @@ label-empty-padding = 1.5
 [module/window]
 type = internal/xwindow
 format = <label>
-label = %title%
+label = %class%
 label-maxlen = 45
 label-empty = Desktop
 
