--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -8,14 +8,15 @@ monitor = ${env:MONITOR:eDP-1}
 
 width = 100%
 height = 24pt
-radius = 0
+radius = 8
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 0pt
+border-size = 8pt
+border-bottom-size = 0
 border-color = #00000000
 
 padding-left = 0
@@ -23,7 +24,11 @@ padding-right = 1
 
 module-margin = 1
 
+separator = |
+separator-foreground = ${colors.disabled}
+
 font-0 = JetBrainsMonoNL Nerd Font;2
+font-1 = JetBrainsMonoNL Nerd Font Mono:size=20;5
 
 wm-restack = bspwm
 
@@ -32,13 +37,10 @@ wm-restack = bspwm
 inherit = base
 monitor = eDP-1
 
-; dpi = 80
-
 modules-left = workspaces
 modules-right = keyboard audio bluetooth network temperature battery date powermenu
 
 cursor-click = pointer
-cursor-scroll = ns-resize
 
 enable-ipc = true
 
