--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -60,14 +60,10 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 blacklist-1 = caps lock
 
-layout-icon-default = " "
+layout-icon-default = "%{F#c0a36e}%{T2}%{T-}%{F-}"
+layout-icon-foreground = ${colors.primary}
 label-layout = %icon% %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+label-layout-font = %icon% %layout%
 
 
 [module/memory]
@@ -87,93 +83,83 @@ label = %percentage:2%
 
 
 [module/bluetooth]
-type = custom/script
-exec = rofi-bluetooth --status
-interval = 1
+type = custom/text
+label = 
 click-left = blueman-manager
-format-padding = 1
+
+
+[network-base]
+type = internal/network
+
+format-connected = <label-connected>
+format-disconnected = <label-disconnected>
+
+format-connected-foreground = ${colors.green}
+format-connected-prefix = "󰤨"
+format-connected-prefix-font = 2
+
+label-connected = "%{A1:nm-connection-editor &:} %netspeed%%{A}"
+label-disconnected = "%{A1:nm-connection-editor &:}Offline%{A}"
+
+format-disconnected-prefix = "󰤮 "
+format-disconnected-foreground = ${colors.red}
 
 
 [module/network]
-type = internal/network
-interface = ${system.network_interface_wireless}
-format-padding = 1
-format-connected = <label-connected>
-format-connected-foreground = ${colors.green}
-format-connected-prefix = "󰤨 "
-format-disconnected = <label-disconnected>
-format-disconnected-prefix = "󰤮 "
-format-disconnected-padding = 1
-format-disconnected-foreground = ${colors.red}
-label-connected = "%{A1:networkmanager_dmenu &:}%{A}"
-label-disconnected = "%{A1:networkmanager_dmenu &:}Offline%{A}"
-
-
-; [module/ethernet]
-; type = internal/network
-; interface = ${network_interface_ethernet}
-; format-connected = <label-connected>
-; format-connected-prefix = "󰈁 "
-; format-connected-padding = 1
-; format-disconnected = <label-disconnected>
-; format-disconnected-prefix = "󰈂 "
-; format-disconnected-padding = 1
-; label-connected = "%{A1:networkmanager_dmenu &:}%downspeed%|%upspeed%%{A}"
-; label-disconnected = "{%{A1:networkmanager_dmenu &:}%{A}"
+inherit = network-base
+interface-type = wireless
 
 
 [module/temperature]
 type = internal/temperature
+
 interval = 1
-thermal-zone = 8
-zone-type = x86_pkg_temp
-warm-temperature = 60
+base-temperature = 20
+warn-temperature =  60
 units = true
+
 format = <ramp> <label>
-format-warm = <ramp> <label-warm>
+format-warn = <ramp> <label-warn>
+
 label = %temperature-c%
-label-foreground = ${colors.primary}
-label-warm = %temperature-c%
-label-warm-foreground = ${colors.red}
+label-foreground = ${colors.blue}
+
+label-warn = %temperature-c%
+label-warn-foreground = ${colors.red}
+
 ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-ramp-5 = 
-ramp-6 = 
-ramp-7 = 
-ramp-8 = 
-ramp-9 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 
 
 [module/battery]
 type = internal/battery
 
-battery = ${system.battery}
-adapter = ${system.adapter}
-
-full-at = 92
+full-at = 98
 low-at = 10
 
-time-format = %H:%M
-
-format-charging = <ramp-capacity>  <label-charging>
+format-charging = <ramp-capacity> <label-charging>
 label-charging = %percentage%%
 format-charging-prefix = " "
 
-format-discharging = <ramp-capacity>  <label-discharging>
+format-full = <ramp-capacity> <label-full>
+
+format-discharging = <ramp-capacity> <label-discharging>
 label-discharging = %percentage%%
 
-format-full = <ramp-capacity>  <label-full>
-label-full = %percentage%%
+format-low = <ramp-capacity> <label-low> <animation-low>
+label-low = %percentage%%
 
+ramp-capacity-font = 2
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
 
+animation-low-foreground = ${colors.red}
 animation-low-0 = !
 animation-low-1 = " "
 animation-low-framerate = 200
