--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -1,23 +1,31 @@
 [colors]
 black = #16161d
-grey = #727169
 red = #c34043
 green = #76946a
 yellow = #c0a36e
 blue = #7e9cd8
 magenta = #957fb8
 cyan = #6a9589
-pink = #938aa9
 white = #c8c093
+
+black-bright = #727169
+red-bright = #e82424
+green-bright = #98bb6c
+yellow-bright = #e6c384
+blue-bright = #7fb4ca
+magenta-bright = #938aa9
+cyan-bright = #7aa89f
+white-bright = #dcd7ba
 
 ; background = #1f1f28
 background = ${colors.black}
+background-alt = ${colors.black}
 foreground = #dcd7ba
 
 primary = ${colors.yellow}
 secondary = ${colors.blue}
-background-alt = ${colors.background}
 success = ${colors.green}
 urgent = ${colors.magenta}
 alert = ${colors.red}
-disabled = ${colors.grey}
+disabled = ${colors.black-bright}
+
