--- a/.config/zoomus.conf
+++ b/.config/zoomus.conf
@@ -15,7 +15,7 @@ chatListPanelLastWidth=230
 com.disable.connection.pk.status=false
 com.zoom.client.langid=0
 conf.webserver=https://zoom.us
-currentMeetingId=
+currentMeetingId=99888103843
 deviceID=D4:E9:8A:32:ED:A3
 disableCef=false
 enable.host.auto.grab=true
