--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -18,18 +18,22 @@ icon-3 = 7;
 icon-4 = 10;
 icon-default = 
 
-label-active = %{T2}%icon%%{T-}
+label-active = %icon%
+label-active-font = 2
 label-active-background = ${colors.secondary}
 label-active-padding = 1.5
 
-label-occupied = %{T2}%icon%%{T-}
+label-occupied = %icon%
+label-occupied-font = 2
 label-occupied-padding = 1.5
 
-label-urgent = %{T2}%icon%%{T-}
-label-urgent-background = ${colors.alert}
+label-urgent = %icon%
+label-urgent-font = 2
+label-urgent-foreground = ${colors.magenta}
 label-urgent-padding = 1.5
 
-label-empty = %{T2}%icon%%{T-}
+label-empty = %icon%
+label-empty-font = 2
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1.5
 
@@ -99,7 +103,7 @@ format-connected-prefix = "󰤨"
 format-connected-prefix-font = 2
 
 label-connected = "%{A1:nm-connection-editor &:} %netspeed%%{A}"
-label-disconnected = "%{A1:nm-connection-editor &:}Offline%{A}"
+label-disconnected = "%{A1:nmtui &:}Offline%{A}"
 
 format-disconnected-prefix = "󰤮 "
 format-disconnected-foreground = ${colors.red}
