--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,6 +2,7 @@ font_family JetBrainsMonoNL Nerd Font
 font_size 10.0
 
 cursor_shape block
+shell_integration no-cursor
 
 enable_audio_bell no
 
@@ -10,65 +11,55 @@ tab_separator " | "
 
 background_opacity 0.9
 background_tint 1
-# background_blur 1
 
-#: The basic colors
-foreground                      #dcd7ba
 background                      #1f1f28
-selection_foreground            #c8c093
+foreground                      #dcd7ba
 selection_background            #2d4f67
-
-#: Cursor colors
+selection_foreground            #c8c093
+url_color                       #72a7bc
 cursor                          #c8c093
 
-#: URL underline color when overing with mouse
-url_color                       #72a7bc
-
-#: Tab bar colors
+# Tabs
 active_tab_foreground           #c8c093
 active_tab_background           #1f1f28
 inactive_tab_foreground         #727169
 inactive_tab_background         #1f1f28
+# tab_bar_background #15161E
 
-#: The basic 16 colors
-
-#: black
+# black
 color0  #16161d
 color8  #727169
 
-#: red
+# Red
 color1  #c34043
 color9  #e82424
 
-#: green
+# Green
 color2  #76946a
 color10 #98bb6c
 
-#: yellow
+# Yellow
 color3  #c0a36e
 color11 #e6c384
 
-#: blue
+# Blue
 color4  #7e9cd8
 color12 #7fb4ca
 
-#: magenta
+# Magenta
 color5  #957fb8
 color13 #938aa9
 
-#: cyan
+# Cyan
 color6  #6a9589
 color14 #7aa89f
 
-#: white
+# White
 color7  #c8c093
 color15 #dcd7ba
 
-
-#: You can set the remaining 240 colors as color16 to color255.
-
+# Extended colors
 color16 #ffa066
 color17 #ff5d62
 
-shell_integration no-cursor
 
