remove bluetooth from polybar and add rofi-power-menu

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -37,10 +37,9 @@ cursor-scroll = ns-resize
 
 [bar/main]
 inherit = base
-monitor = eDP-1
 
 modules-left = workspaces
-modules-right = keyboard audio bluetooth network temperature battery date powermenu
+modules-right = keyboard audio network temperature battery date powermenu
 
 enable-ipc = true
 
