--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -86,12 +86,6 @@ format-prefix-foreground = ${colors.primary}
 label = %percentage:2%
 
 
-[module/bluetooth]
-type = custom/text
-label = 
-click-left = blueman-manager
-
-
 [network-base]
 type = internal/network
 
@@ -181,49 +175,9 @@ label-foreground = ${colors.primary}
 
 
 [module/powermenu]
-type = custom/menu
+type = custom/text
 
-expand-right = true
+label = " "
+label-foreground = ${colors.red}
 
-format-spacing = 1
-
-label-open = " "
-label-open-foreground = ${colors.red}
-label-close =  cancel
-label-close-foreground = ${colors.disabled}
-label-separator = |
-label-separator-foreground = ${colors.foreground}
-
-menu-0-0 = "Pwr Off"
-menu-0-0-exec = menu-open-1
-menu-0-0-foreground = ${colors.red}
-
-menu-0-1 = "Reb"
-menu-0-1-exec = menu-open-2
-menu-0-1-foreground = ${colors.red}
-
-menu-0-2 = "Hib"
-menu-0-2-exec = menu-open-3
-menu-0-2-foreground = ${colors.blue}
-
-menu-1-0 = "Back "
-menu-1-0-exec = menu-open-0
-menu-1-0-foreground = ${colors.urgent}
-menu-1-1 = "Power off"
-menu-1-1-exec = systemctl poweroff
-menu-1-1-foreground = ${colors.red}
-
-menu-2-0 = "Back "
-menu-2-0-exec = menu-open-0
-menu-2-0-foreground = ${colors.urgent}
-menu-2-1 = "Reboot"
-menu-2-1-exec = systemctl reboot
-menu-2-1-foreground = ${colors.red}
-
-menu-3-0 = "Back"
-menu-3-0-exec = menu-open-0
-menu-3-0-foreground = ${colors.urgent}
-menu-3-1 = "Hibernate "
-menu-3-1-exec = systemctl hibernate
-menu-3-1-foreground = ${colors.blue}
-
+click-left = rofi -show power-menu -modi power-menu:rofi-power-menu
