add nm-applet with systray and polybar wifi ramp-signal

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -18,8 +18,7 @@ border-size = 8pt
 border-bottom-size = 0
 border-color = #00000000
 
-padding-left = 0
-padding-right = 1
+padding = 1
 
 module-margin = 1
 
@@ -38,7 +37,7 @@ cursor-scroll = ns-resize
 [bar/main]
 inherit = base
 
-modules-left = workspaces
+modules-left = tray-btn systray workspaces
 modules-right = keyboard audio network temperature battery date powermenu
 
 enable-ipc = true
