--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,5 +1,14 @@
+[module/tray-btn]
+
+type = custom/text
+content = 󰣇
+content-font = 2
+content-foreground = ${colors.blue}
+click-left = polybar-msg action systray module_toggle
+
 [module/systray]
 type = internal/tray
+hidden = true
 
 format-margin = 8pt
 tray-spacing = 16pt
@@ -13,9 +22,10 @@ enable-scroll = false
 
 icon-0 = 1;
 icon-1 = 2;
-icon-2 = 6;
-icon-3 = 7;
-icon-4 = 10;
+icon-2 = 3;󰠮
+icon-3 = 6;
+icon-4 = 7;
+icon-5 = 10;
 icon-default = 
 
 label-active = %icon%
@@ -89,19 +99,21 @@ label = %percentage:2%
 [network-base]
 type = internal/network
 
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-
+format-connected = <ramp-signal><label-connected>
 format-connected-foreground = ${colors.green}
-format-connected-prefix = "󰤨"
-format-connected-prefix-font = 2
-
 label-connected = "%{A1:nm-connection-editor &:} %netspeed%%{A}"
-label-disconnected = "%{A1:nmtui &:}Offline%{A}"
 
 format-disconnected-prefix = "󰤮 "
 format-disconnected-foreground = ${colors.red}
+label-disconnected = "%{A1:nmtui &:}Offline%{A}"
+format-disconnected = <label-disconnected>
 
+ramp-signal-0 = 󰤯
+ramp-signal-1 = 󰤟
+ramp-signal-2 = 󰤢
+ramp-signal-3 = 󰤥
+ramp-signal-4 = 󰤨
+ramp-signal-font = 2
 
 [module/network]
 inherit = network-base
