--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -9,9 +9,7 @@ click-left = polybar-msg action systray module_toggle
 [module/systray]
 type = internal/tray
 hidden = true
-
-format-margin = 8pt
-tray-spacing = 16pt
+tray-spacing = 12pt
 
 
 [module/workspaces]
@@ -99,13 +97,13 @@ label = %percentage:2%
 [network-base]
 type = internal/network
 
-format-connected = <ramp-signal><label-connected>
+format-connected = <ramp-signal> <label-connected>
 format-connected-foreground = ${colors.green}
-label-connected = "%{A1:nm-connection-editor &:} %netspeed%%{A}"
+label-connected = "%netspeed%%{A}"
 
 format-disconnected-prefix = "󰤮 "
 format-disconnected-foreground = ${colors.red}
-label-disconnected = "%{A1:nmtui &:}Offline%{A}"
+label-disconnected = "Offline"
 format-disconnected = <label-disconnected>
 
 ramp-signal-0 = 󰤯
@@ -118,7 +116,6 @@ ramp-signal-font = 2
 [module/network]
 inherit = network-base
 interface-type = wireless
-
 
 [module/temperature]
 type = internal/temperature
@@ -193,3 +190,4 @@ label = " "
 label-foreground = ${colors.red}
 
 click-left = rofi -show power-menu -modi power-menu:rofi-power-menu
+
