add polybar music module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -27,6 +27,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = JetBrainsMonoNL Nerd Font;2
 font-1 = JetBrainsMonoNL Nerd Font Mono:size=20;5
+font-2 = Noto Sans CJK HK;2
 
 wm-restack = bspwm
 
@@ -38,6 +39,7 @@ cursor-scroll = ns-resize
 inherit = base
 
 modules-left = tray-btn systray workspaces
+modules-center = music
 modules-right = keyboard audio network temperature battery date powermenu
 
 enable-ipc = true
