--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -23,7 +23,7 @@ icon-1 = 2;
 icon-2 = 3;󰠮
 icon-3 = 6;
 icon-4 = 7;
-icon-5 = 10;
+icon-5 = 10;
 icon-default = 
 
 label-active = %icon%
@@ -46,12 +46,11 @@ label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1.5
 
 
-[module/window]
-type = internal/xwindow
-format = <label>
-label = %class%
-label-maxlen = 45
-label-empty = Desktop
+[module/music]
+type = custom/script
+interval = 1
+label = %output%
+exec = ~/.config/polybar/scripts/music
 
 
 [module/audio]
@@ -143,6 +142,9 @@ ramp-4 = 
 
 [module/battery]
 type = internal/battery
+
+battery = BAT1
+adapter = ADP1
 
 full-at = 98
 low-at = 10
