--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -40,11 +40,8 @@ shadow-offset-y = -7;
 # Specify a list of conditions of windows that should have no shadow.
 # shadow-exclude = []
 shadow-exclude = [
-  "name = 'Notification'",
-  "class_g = 'Conky'",
-  "class_g ?= 'Notify-osd'",
-  "class_g = 'Cairo-clock'",
-];
+  "class_g = 'Dunst'"
+]
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
 # clip-shadow-above = []
@@ -62,15 +59,14 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-# fade-in-step = 0.03;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.015;
+fade-out-step = 0.015
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
 fade-delta = 4
@@ -107,7 +103,6 @@ fade-delta = 4
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -135,7 +130,7 @@ corner-radius = 15
 rounded-corners-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
-];
+]
 
 
 #################################
@@ -174,7 +169,7 @@ blur-strength = 12
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ""
-blur-kern = "3x3box";
+blur-kern = "3x3box"
 
 
 # Exclude conditions for background blur.
@@ -182,7 +177,7 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
-];
+]
 
 #################################
 #       General Settings        #
@@ -198,38 +193,38 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 # backend = "glx"
-backend = "glx";
+backend = "glx"
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
 # degradation. Only works with OpenGL.
-dithered-present = true;
+dithered-present = true
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true;
+vsync = true
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
 #
 # mark-wmwin-focused = false
-mark-wmwin-focused = true;
+mark-wmwin-focused = true
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
 # mark-ovredir-focused = false
-mark-ovredir-focused = true;
+mark-ovredir-focused = true
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
 #
 # detect-rounded-corners = false
-detect-rounded-corners = true;
+detect-rounded-corners = true
 
 # Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
 #
 # detect-client-opacity = false
-detect-client-opacity = true;
+detect-client-opacity = true
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
@@ -253,7 +248,7 @@ detect-client-opacity = true;
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true;
+detect-transient = true
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
 # group focused at the same time. This usually means windows from the same application
@@ -300,7 +295,7 @@ glx-no-rebind-pixmap = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true;
+use-damage = true
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
@@ -355,7 +350,7 @@ use-damage = true;
 # using *--log-file*, since it can generate a huge stream of logs.
 #
 # log-level = "debug"
-log-level = "warn";
+log-level = "warn"
 
 # Set the log file.
 # If *--log-file* is never specified, logs will be written to stderr.
