ranger: configs and custom theme

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -141,7 +141,7 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme snow
+set colorscheme custom
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
@@ -156,7 +156,7 @@ set wrap_plaintext_previews false
 set save_console_history true
 
 # Draw the status bar on top of the browser window (default: bottom)
-set status_bar_on_top false
+set status_bar_on_top true
 
 # Draw a progress bar in the status bar which displays the average state of all
 # currently running tasks which support progress bars?
@@ -208,7 +208,7 @@ set max_console_history_size 50
 set scroll_offset 8
 
 # Flush the input after each key hit?  (Noticeable when ranger lags)
-set flushinput true
+set flushinput false
 
 # Padding on the right when there's no preview?
 # This allows you to click into the space to run the file.
@@ -250,7 +250,7 @@ set xterm_alt_key false
 set cd_bookmarks true
 
 # Changes case sensitivity for the cd command tab completion
-set cd_tab_case sensitive
+set cd_tab_case insensitive
 
 # Use fuzzy tab completion with the "cd" command. For example,
 # ":cd /u/lo/b<tab>" expands to ":cd /usr/local/bin".
@@ -282,21 +282,21 @@ set clear_filters_on_dir_change false
 
 # Disable displaying line numbers in main column.
 # Possible values: false, absolute, relative.
-set line_numbers false
+set line_numbers relative
 
 # When line_numbers=relative show the absolute line number in the
 # current line.
-set relative_current_zero false
+set relative_current_zero true
 
 # Start line numbers from 1 instead of 0
-set one_indexed false
+set one_indexed true
 
 # Save tabs on exit
 set save_tabs_on_exit false
 
 # Enable scroll wrapping - moving down while on the last item will wrap around to
 # the top and vice versa.
-set wrap_scroll false
+set wrap_scroll true
 
 # Set the global_inode_type_filter to nothing.  Possible options: d, f and l for
 # directories, files and symlinks respectively.
@@ -764,3 +764,5 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 default_linemode devicons
+
+map DD shell mv %s /home/${USER}/.local/share/Trash/files/
