albafetch: move config to its own directory

--- a/.config/albafetch/albafetch.conf
+++ b/.config/albafetch/albafetch.conf
@@ -1,5 +1,4 @@
-ascii_art = "/home/jdgt/ascii"
-# logo = "arch"
+ascii_art = "/home/jdgt/.config/albafetch/ascii.txt"
 dash = "\e[0m\e[1m: "
 spacing = "3"
 
