misc: some stuff

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -68,11 +68,11 @@ xwayland {
 general { 
     gaps_in = 6
     gaps_out = 12
-
     border_size = 4
 
     col.active_border = rgb(6a9589) rgb(7aa89f) 45deg
     col.inactive_border = rgba(727169aa)
+	no_focus_fallback = true
 
 	allow_tearing = true
 
@@ -101,7 +101,7 @@ animations {
 
 	animation = windows, 1, 3, default
     animation = windowsOut, 1, 4, default, popin 80%
-    animation = border, 1, 8, default
+    animation = border, 1, 6, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 4, default
@@ -201,20 +201,21 @@ bind = SUPER, C, alterzorder, top
 bind = SUPERSHIFT, C, cyclenext, prev
 bind = SUPERSHIFT, C, alterzorder, top
 
-# Fast edit mode
 $step = 50
-bind = SUPER, W, submap, fastedit
 
-submap = fastedit
+binde = SUPERALT, L, resizeactive, $step 0
+binde = SUPERALT, H, resizeactive, -$step 0
+binde = SUPERALT, K, resizeactive, 0 -$step
+binde = SUPERALT, J, resizeactive, 0 $step
+
+# Fast edit mode
+bind = SUPER, W, submap, Move
+submap = Move
 
 binde = , L, moveactive, $step 0
 binde = , H, moveactive, -$step 0
 binde = , K, moveactive, 0 -$step
 binde = , J, moveactive, 0 $step
-binde = ALT, L, resizeactive, $step 0
-binde = ALT, H, resizeactive, -$step 0
-binde = ALT, K, resizeactive, 0 -$step
-binde = ALT, J, resizeactive, 0 $step
 
 bind = SUPER, W, submap, reset
 bind = , Q, submap, reset
