--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -17,8 +17,8 @@
 		// "mpd",
 		"hyprland/submap",
 		"hyprland/language",
-		"wireplumber",
-		// "pulseaudio",
+		// "wireplumber",
+		"pulseaudio",
 		"network",
 		"temperature",
 		"battery",
@@ -83,15 +83,16 @@
 		"spacing": 10
 	},
 	"clock": {
-		"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-		"format-alt": "{:%d-%m-%Y}"
+		"interval": 1,
+		"format": "{:%d/%m %H:%M}",
+		"format-alt": "{:%d/%m/%Y %H:%M:%S}",
+		"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
 	},
 	"temperature": {
 		"interval": 2,
 		// "thermal-zone": 2,
 		// "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
 		"critical-threshold": 80,
-		// "format-critical": "{temperatureC}°C {icon}",
 		"format": "{icon} {temperatureC}°C",
 		"format-icons": [
 			"",
@@ -115,7 +116,6 @@
 		"format-full": "{icon} {capacity}%",
 		"format-charging": " {capacity}%",
 		"format-plugged": " {capacity}%",
-		"format-alt": "{icon} {time}",
 		"format-icons": [
 			"",
 			"",
