hyprland: change some configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,6 +30,7 @@ $browser = librewolf
 
 exec-once = handle_monitor_connect
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 exec-once = hyprpaper
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24
@@ -45,16 +46,37 @@ exec-once = [workspace 2 silent] $browser
 ### ENVIRONMENT VARIABLES ###
 #############################
 
+# Run apps in Wayland instead of XWayland
+# env = ELECTRON_OZONE_PLATFORM_HINT,auto
+
+# Toolkit backend
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland;xcb
+env = SDL_VIDEODRIVER,wayland 
+env = CLUTTER_BACKEND,wayland
+
+# XDG specifications
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+# Nvidia
+# env = GBM_BACKEND,nvidia-drm # Causes LibreWolf crash
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = LIBVA_DRIVER_NAME,nvidia
+
+
+# Theming
+env = GTK_THEME,Kanagawa-Borderless
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
-# env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
-# Nvidia required stuff
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-# env = GBM_BACKEND,nvidia-drm # Caused LibreWolf crash
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+# VAAPI driver
+# env = NVD_BACKEND,direct
+# env = MOZ_DISABLE_RDD_SANDBOX,1
+# env = LIBVA_DRIVER_NAME,nvidia
+# env = __EGL_VENDOR_LIBRARY_FILENAMES,/usr/share/glvnd/egl_vendor.d/10_nvidia.json
 
 
 #####################
@@ -91,7 +113,6 @@ decoration {
         enabled = true
         size = 3
         passes = 1
-        
         vibrancy = 0.1696
     }
 }
@@ -162,9 +183,10 @@ bind = SUPERSHIFT, Return, exec, [float; size 50% 50%] $terminal
 bind = SUPER, E, exec, $fileManager
 bind = SUPER, B, exec, $browser
 
-# Wofi
-bind = SUPER, Space, exec, pkill wofi || wofi --show drun
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+# Menus
+bind = SUPER, Space, exec, pkill rofi || rofi -show drun
+bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER, Period, exec, rofimoji
 
 # Screen capture
 bind = , Print, exec, slurp | grim -g - - | wl-copy
@@ -177,6 +199,7 @@ bind = SUPER, M, fullscreen, 1 # Monocle-ish
 bind = SUPER, T, settiled,
 bind = SUPERSHIFT, T, pseudo,
 bind = SUPER, S, setfloating,
+bind = SUPERSHIFT, J, togglesplit
 
 # Move window focus
 bind = SUPER, H, movefocus, l
@@ -316,8 +339,8 @@ windowrule = workspace 3, ^(obsidian)$
 windowrule = workspace 6, ^(discord)$
 windowrule = workspace 10, ^(Spotify)$
 
-# Different border color for pinned windows
-windowrulev2 = bordercolor rgb(e6c384), pinned:1
+windowrulev2 = bordercolor rgb(e6c384), pinned:1 # Different border color for pinned windows
+windowrulev2 = noborder, fullscreen:1 # Borderless monocle
 
 windowrulev2 = suppressevent maximize, class:.*
 
