hyprland: specify rofimoji neutral skin tone

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -186,7 +186,7 @@ bind = SUPER, B, exec, $browser
 # Menus
 bind = SUPER, Space, exec, pkill rofi || rofi -show drun
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind = SUPER, Period, exec, rofimoji
+bind = SUPER, Period, exec, rofimoji --skin-tone neutral
 
 # Screen capture
 bind = , Print, exec, slurp | grim -g - - | wl-copy
