hyprland: re-add gtk/qt theme and browser environment variables, and add power menu binding

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -46,6 +46,9 @@ exec-once = [workspace 2 silent] $browser
 ### ENVIRONMENT VARIABLES ###
 #############################
 
+# My own stuff
+env = BROWSER,librewolf
+
 # Run apps in Wayland instead of XWayland
 # env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
@@ -68,6 +71,8 @@ env = LIBVA_DRIVER_NAME,nvidia
 
 # Theming
 env = GTK_THEME,Kanagawa-Borderless
+env = GTK2_RC_FILES,/usr/share/themes/Kanagawa-Borderless/gtk-2.0/gtkrc
+env = QT_QPA_PLATFORMTHEME,gtk2
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
@@ -187,6 +192,7 @@ bind = SUPER, B, exec, $browser
 bind = SUPER, Space, exec, pkill rofi || rofi -show drun
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = SUPER, Period, exec, rofimoji --skin-tone neutral
+bind = SUPER, X, exec, rofi -show menu -modi "menu:rofi-power-menu --choices=shutdown/reboot/suspend/logout/lockscreen"
 
 # Screen capture
 bind = , Print, exec, slurp | grim -g - - | wl-copy
