--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -32,7 +32,7 @@
 	"custom/sysmenu": {
 		"format": "󰣇",
 		"tooltip-format": "",
-		"on-click": "wofi --show drun"
+		"on-click": "rofi -show drun"
 	},
 	"hyprland/workspaces": {
 		"format": "{icon}",
