--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 exec-once = hyprpaper
-exec-once = hyprctl setcursor Bibata-Modern-Ice 24
+exec-once = import_gsettings
 exec-once = waybar
 exec-once = dunst
 exec-once = wl-paste --watch cliphist store
@@ -68,12 +68,13 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = LIBVA_DRIVER_NAME,nvidia
 
-
 # Theming
 env = GTK_THEME,Kanagawa-Borderless
 env = GTK2_RC_FILES,/usr/share/themes/Kanagawa-Borderless/gtk-2.0/gtkrc
 env = QT_QPA_PLATFORMTHEME,gtk2
+env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
 
 
